--- a/VulkanTutorial/VulkanTutorial/VulkanTutorial.vcxproj.filters
+++ b/VulkanTutorial/VulkanTutorial/VulkanTutorial.vcxproj.filters
@@ -26,6 +26,9 @@
     <ClInclude Include="include\TriangleApp.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="include\stb_image.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Shader\shader.frag" />
