--- a/VulkanTutorial/VulkanTutorial/VulkanTutorial.vcxproj
+++ b/VulkanTutorial/VulkanTutorial/VulkanTutorial.vcxproj
@@ -191,6 +191,7 @@
     <ClCompile Include="src\Camera.cpp" />
     <ClCompile Include="src\CommandBuffer.cpp" />
     <ClCompile Include="src\CommandPool.cpp" />
+    <ClCompile Include="src\Context.cpp" />
     <ClCompile Include="src\Helpers.cpp" />
     <ClCompile Include="src\InputManager.cpp" />
     <ClCompile Include="src\main.cpp" />
@@ -205,9 +206,11 @@
     <ClInclude Include="include\Camera.h" />
     <ClInclude Include="include\CommandBuffer.h" />
     <ClInclude Include="include\CommandPool.h" />
+    <ClInclude Include="include\Context.h" />
     <ClInclude Include="include\Helpers.h" />
     <ClInclude Include="include\InputManager.h" />
     <ClInclude Include="include\Mesh.h" />
+    <ClInclude Include="include\QueueFamilyIndices.h" />
     <ClInclude Include="include\Shader.h" />
     <ClInclude Include="include\stb_image.h" />
     <ClInclude Include="include\Renderer.h" />
