add hot reload lib

--- a/.gitignore
+++ b/.gitignore
@@ -366,3 +366,5 @@ MigrationBackup/
 # End of https://www.gitignore.io/api/visualstudio,visualstudiocode
 
 !VulkanTutorial/VulkanTutorial/Librairies/*
+
+!HotReload/TestHotReload/LivePP/*
